--- a/assignment2/classes.html
+++ b/assignment2/classes.html
@@ -8,6 +8,8 @@
 
     <h1>Creative Technologies Courses (CTK)</h1>
 
+    <img src="clown1.jpg" alt="A clown!">
+
     <ul>
         <li><a href="ctkMain.html">CTK Program</a></li>
         <li><a href="requirements.html">Requirements and Sequences</a></li>
