--- a/assignment2/ctkMain.html
+++ b/assignment2/ctkMain.html
@@ -8,6 +8,8 @@
 
 <h1>Creative Technologies Program (CTK)</h1>
 
+<img src="Smooth Mario.png" alt="Smooth Mario.">
+
 <ul>
     <li><a href="ctkMain.html">CTK Program</a></li>
     <li><a href="requirements.html">Requirements and Sequences</a></li>
