--- a/assignment2/requirements.html
+++ b/assignment2/requirements.html
@@ -7,6 +7,8 @@
 <body>
 <h1>Requirements and Sequences for Creative Technologies</h1>
 
+<img src="clown2.jpg" alt="It's a clown.">
+
 <ul>
     <li><a href="ctkMain.html">CTK Program</a></li>
     <li><a href="requirements.html">Requirements and Sequences</a></li>
