--- a/assignment3.html
+++ b/assignment3.html
@@ -14,9 +14,9 @@
 
 <nav>
     <ul>
-        <li><a href="ctkMain.html">CTK Program</a></li>
-        <li><a href="requirements.html">Requirements and Sequences</a></li>
-        <li><a href="classes.html">CTK Classes</a></li>
+        <li><a href="assignment3.html">CTK Program</a></li>
+        <li><a href="requirementsA3.html">Requirements and Sequences</a></li>
+        <li><a href="classesA3.html">CTK Classes</a></li>
     </ul>
 </nav>
 
