--- a/MyWebsite/ELMenk Video.html
+++ b/MyWebsite/ELMenk Video.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>ELMenk Home</title>
+	<title>ELMenk Video</title>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Lobster+Two&display=swap" rel="stylesheet">
@@ -11,7 +11,7 @@
 </head>
 <body>
 	<nav>
-		<div class="dummycolumn"><h1>Ethan L. Menk</h1></div>
+		<div class="dummycolumn"><h1 class="dummycolumn">Ethan L. Menk</h1></div>
 		<div class="dummycolumn"><a href="ELMenk Website.html">Gallery</a></div>
 		<div class="dummycolumn"><a href="ELMenk Website.html">Video</a></div>
 		<div class="dummycolumn"><a href="ELMenk Website.html">About</a></div>
@@ -21,22 +21,11 @@
 		<main>
 			<h1>WELCOME</h1>
 			<p>Welcome to my website. It is still under construction, maybe when you return there might be something actually important written here. Or a background. Or Links. Or literally anything except pastrami.</p>
+			<p></p>
+		`	<iframe width="560" height="315" src="https://www.youtube.com/embed/fC7oUOUEEi4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
 		
-		<div class="Gallery">
-			<div class="medImg">
-				<img src="Pastrami.jpg" alt="Oh Look, Pastrami!" />
-				<p> oh, it's pastrami</p>
-			</div>
-			<div class="medImg">
-				<img src="Pastrami.jpg" alt="Oh Look, Pastrami!" />
-				<p> oh, it's pastrami</p>
-			</div>
-			<div class="medImg">
-				<img src="Pastrami.jpg" alt="Oh Look, Pastrami!" />
-				<p> oh, it's pastrami</p>
-				<i class="bi bi-twitter"></i>
-			</div>
-		</div>
+		
 		</main>
 	</div>
 	<footer>
