--- a/MyWebsite/ELMenk Gallery.html
+++ b/MyWebsite/ELMenk Gallery.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>ELMenk Home</title>
+	<title>ELMenk Gallery</title>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Lobster+Two&display=swap" rel="stylesheet">
@@ -27,11 +27,11 @@
 				<img src="Pastrami.jpg" alt="Oh Look, Pastrami!" />
 				<p> oh, it's pastrami</p>
 			</div>
-			<div class="medImg">
+			<div class="largeImg">
 				<img src="Pastrami.jpg" alt="Oh Look, Pastrami!" />
 				<p> oh, it's pastrami</p>
 			</div>
-			<div class="medImg">
+			<div class="fullImg">
 				<img src="Pastrami.jpg" alt="Oh Look, Pastrami!" />
 				<p> oh, it's pastrami</p>
 				<i class="bi bi-twitter"></i>
