--- a/MyWebsite/ELMenk Video.html
+++ b/MyWebsite/ELMenk Video.html
@@ -12,9 +12,9 @@
 <body>
 	<nav>
 		<div class="dummycolumn"><h1 class="dummycolumn">Ethan L. Menk</h1></div>
-		<div class="dummycolumn"><a href="ELMenk Website.html">Gallery</a></div>
-		<div class="dummycolumn"><a href="ELMenk Website.html">Video</a></div>
-		<div class="dummycolumn"><a href="ELMenk Website.html">About</a></div>
+		<div class="dummycolumn"><a href="ELMenk Gallery.html">Gallery</a></div>
+		<div class="dummycolumn"><a href="ELMenk Video.html">Video</a></div>
+		<div class="dummycolumn"><a href="ELMenk About.html">About</a></div>
 		<a class="ISUseal" href="https://illinoisstate.edu/" target="_blank"><img class="ISUseal" src="ISU-Seal_1C_186.png" alt="ISU" /></a>
 	</nav>
 	<div id="wrapper">
